# voca

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
nexus-backend/app/api/: routes.py
nexus-backend/app/models/: schemas.py
nexus-backend/app/services/: orchestrator.py
scripts/: check-backend-workflow.sh
voca-backend/: Dockerfile  pyproject.toml
voca-backend/app/: __init__.py  config.py  main.py
voca-backend/app/api/: auth.py  routes.py  voice_routes.py
voca-backend/app/core/: __init__.py  crypto.py  database.py  redis.py
voca-backend/app/models/: __init__.py  schemas.py
voca-backend/app/services/: __init__.py  calendar_service.py  google_calendar.py  orchestrator.py  provider_service.py  realtime_bridge.py  tools.py  voice_service.py
voca-backend/app/utils/: __init__.py  date_parse.py
voca-backend/tests/: __init__.py
voca-frontend/: Dockerfile  entrypoint.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
voca-frontend/src/: App.tsx  index.css
voca-frontend/src/components/: AuditTrailSidebar.tsx  Layout.tsx  NexusHeader.tsx  UserDropdown.tsx
voca-frontend/src/context/: AuditTrailContext.tsx  AuthContext.tsx  ThemeContext.tsx  UserProfileContext.tsx
voca-frontend/src/hooks/: useCampaignStream.ts
voca-frontend/src/pages/: Admin.tsx  Appointments.tsx  Auth.tsx  CampaignDetail.tsx  Dashboard.tsx  Landing.tsx  Settings.tsx
voca-frontend/src/types/: api.ts
